force-app/main/default/objects/IndividualApplication/fields/gr_ApplicantFundingEstimate__c.field-meta.xml
<CustomField>
    <fullName>gr_ApplicantFundingEstimate__c</fullName>
    <label>Applicant Funding (Estimate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>