force-app/main/default/objects/IndividualApplication/fields/gr_ApplicantID__c.field-meta.xml
<CustomField>
    <fullName>gr_ApplicantID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter the entity identifier assigned by the Federal agency, if any, or the applicant’s control number if applicable.</inlineHelpText>
    <label>Applicant Identifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>