force-app/main/default/objects/IndividualApplication/fields/gr_ApplicantType__c.field-meta.xml
<CustomField>
    <fullName>gr_ApplicantType__c</fullName>
    <description>Select a minimum of one applicant type or select up to three applicant types in accordance with agency instructions.</description>
    <inlineHelpText>Select a minimum of one applicant type or select up to three applicant types in accordance with agency instructions.</inlineHelpText>
    <label>Applicant Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State Government</fullName>
            </value>
            <value>
                <fullName>County Government</fullName>
            </value>
            <value>
                <fullName>City or Township Government</fullName>
            </value>
            <value>
                <fullName>Special District Government</fullName>
            </value>
            <value>
                <fullName>Regional Organization</fullName>
            </value>
            <value>
                <fullName>U.S. Territory or Possession</fullName>
            </value>
            <value>
                <fullName>Independent School District</fullName>
            </value>
            <value>
                <fullName>Public/State Controlled Institution of Higher Education</fullName>
            </value>
            <value>
                <fullName>Indian/Native American Tribal Government (Federally Recognized)</fullName>
            </value>
            <value>
                <fullName>Indian/Native American Tribal Government (Other than Federally Recognized)</fullName>
            </value>
            <value>
                <fullName>Indian/Native American Tribally Designated Organization</fullName>
            </value>
            <value>
                <fullName>Public/Indian Housing Authority</fullName>
            </value>
            <value>
                <fullName>Nonprofit with 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </value>
            <value>
                <fullName>Nonprofit without 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </value>
            <value>
                <fullName>Private Institution of Higher Education</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>For-Profit Organization (Other than Small Business)</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Hispanic-serving Institution</fullName>
            </value>
            <value>
                <fullName>Historically Black Colleges and Universities (HBCUs)</fullName>
            </value>
            <value>
                <fullName>Tribally Controlled Colleges and Universities (TCCUs)</fullName>
            </value>
            <value>
                <fullName>Alaska Native and Native Hawaiian Serving Institutions</fullName>
            </value>
            <value>
                <fullName>Non-domestic (non-US) Entity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>