force-app/main/default/objects/IndividualApplication/fields/gr_ApplicantTypeOtherSpecify__c.field-meta.xml
<CustomField>
    <fullName>gr_ApplicantTypeOtherSpecify__c</fullName>
    <label>Specify Other Applicant Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>