force-app/main/default/objects/IndividualApplication/fields/gr_ApplicationSubjecttoReview__c.field-meta.xml
<CustomField>
    <fullName>gr_ApplicationSubjecttoReview__c</fullName>
    <inlineHelpText>Is application subject to review by state under executive order 12372 process?</inlineHelpText>
    <label>Application Subject to Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, This application was made available to the State</fullName>
            </value>
            <value>
                <fullName>Yes, but has not been selected by the State for review</fullName>
            </value>
            <value>
                <fullName>No, Program is not covered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>