force-app/main/default/objects/IndividualApplication/fields/gr_AreasAffected__c.field-meta.xml
<CustomField>
    <fullName>gr_AreasAffected__c</fullName>
    <description>List the areas or entities using the categories (e.g., cities, counties, states, etc.) specified in agency instructions.</description>
    <inlineHelpText>List the areas or entities using the categories (e.g., cities, counties, states, etc.) specified in agency instructions.</inlineHelpText>
    <label>Areas Affected</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>