force-app/main/default/objects/IndividualApplication/fields/gr_AttachedAdditionalDistricts__c.field-meta.xml
<CustomField>
    <fullName>gr_AttachedAdditionalDistricts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>boolean field indicating if the applicant attached a file of additional districts</description>
    <inlineHelpText>Indicates if the applicant attached a file of additional districts.</inlineHelpText>
    <label>Attached Additional Districts</label>
    <type>Checkbox</type>
</CustomField>