force-app/main/default/objects/IndividualApplication/fields/gr_Candidate_Reviewer_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>gr_Candidate_Reviewer_Qualifications__c</fullName>
    <label>Candidate Reviewer Qualifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>