force-app/main/default/objects/IndividualApplication/fields/gr_CongressionalDistrictProject__c.field-meta.xml
<CustomField>
    <fullName>gr_CongressionalDistrictProject__c</fullName>
    <description>the congressional district of the project or program</description>
    <inlineHelpText>tEnter the Congressional District in the format: 2 character State Abbreviation - 3 character District Number. Examples: CA-005 for California&apos;s 5th district, CA-012 for California&apos;s 12th district.

If all districts in a state are affected, enter &quot;&quot;all&quot;&quot; for the district number. Example: MD-all for all congressional districts in Maryland.

If nationwide (all districts in all states), enter US-all.

If the program/project is outside the US, enter 00-000.</inlineHelpText>
    <label>Congressional District of Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>