force-app/main/default/objects/IndividualApplication/fields/gr_DateSigned__c.field-meta.xml
<CustomField>
    <fullName>gr_DateSigned__c</fullName>
    <label>Date Signed by Authorized Rep</label>
    <type>DateTime</type>
</CustomField>