force-app/main/default/objects/IndividualApplication/fields/gr_DebtExplanation__c.field-meta.xml
<CustomField>
    <fullName>gr_DebtExplanation__c</fullName>
    <inlineHelpText>Brief explanation of debt and attach supporting documentation.</inlineHelpText>
    <label>Debt Explanation</label>
    <type>TextArea</type>
</CustomField>