force-app/main/default/objects/IndividualApplication/fields/gr_DelinquentFederalDebt__c.field-meta.xml
<CustomField>
    <fullName>gr_DelinquentFederalDebt__c</fullName>
    <inlineHelpText>Is the applicant delinquent on any federal debt?</inlineHelpText>
    <label>Delinquent Federal Debt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>