force-app/main/default/objects/IndividualApplication/fields/gr_FederalAwardID__c.field-meta.xml
<CustomField>
    <fullName>gr_FederalAwardID__c</fullName>
    <label>Federal Award Identifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>