force-app/main/default/objects/IndividualApplication/fields/gr_FederalEntityID__c.field-meta.xml
<CustomField>
    <fullName>gr_FederalEntityID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter the number assigned to your organization by the federal agency, if any.</inlineHelpText>
    <label>Federal Entity Identifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>