force-app/main/default/objects/IndividualApplication/fields/gr_FederalFundingEstimated__c.field-meta.xml
<CustomField>
    <fullName>gr_FederalFundingEstimated__c</fullName>
    <label>Federal Funding (Estimated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>