force-app/main/default/objects/IndividualApplication/fields/gr_hasAdditionalProjectTitles__c.field-meta.xml
<CustomField>
    <fullName>gr_hasAdditionalProjectTitles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is true is there is an attached file(s).</description>
    <inlineHelpText>Indicates that there is an attached file(s).</inlineHelpText>
    <label>Attached Additional Project Titles</label>
    <type>Checkbox</type>
</CustomField>