force-app/main/default/objects/IndividualApplication/fields/gr_hasCertificationAgree__c.field-meta.xml
<CustomField>
    <fullName>gr_hasCertificationAgree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies that the user has agreed to the attestation statement.</description>
    <label>Certification Agree</label>
    <type>Checkbox</type>
</CustomField>