force-app/main/default/objects/IndividualApplication/fields/gr_hasDebtExplanationAttached__c.field-meta.xml
<CustomField>
    <fullName>gr_hasDebtExplanationAttached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>boolean to identify if the applicant has attached the reason for being delinquent on any federal debt.</description>
    <inlineHelpText>Identifies if the applicant has attached supporting documentation regarding delinquency on any federal debt.</inlineHelpText>
    <label>Debt Explanation Attached</label>
    <type>Checkbox</type>
</CustomField>