force-app/main/default/objects/IndividualApplication/fields/gr_hasSignature__c.field-meta.xml
<CustomField>
    <fullName>gr_hasSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed by Authorized Rep</label>
    <type>Checkbox</type>
</CustomField>