force-app/main/default/objects/IndividualApplication/fields/gr_hasSupportingDocs__c.field-meta.xml
<CustomField>
    <fullName>gr_hasSupportingDocs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>boolean identifier if the applicant attached additional documentation as specified in the agency instructions.</description>
    <inlineHelpText>Applicant has attached supporting documents as specified in agency instructions.</inlineHelpText>
    <label>Attached Supporting Documents</label>
    <type>Checkbox</type>
</CustomField>