force-app/main/default/objects/IndividualApplication/fields/gr_LocalFundingEstimate__c.field-meta.xml
<CustomField>
    <fullName>gr_LocalFundingEstimate__c</fullName>
    <label>Local Funding (Estimate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>