force-app/main/default/objects/IndividualApplication/fields/gr_OtherFundingEstimate__c.field-meta.xml
<CustomField>
    <fullName>gr_OtherFundingEstimate__c</fullName>
    <label>Other Funding (Estimate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>