force-app/main/default/objects/IndividualApplication/fields/gr_ProgramIncomeEstimate__c.field-meta.xml
<CustomField>
    <fullName>gr_ProgramIncomeEstimate__c</fullName>
    <label>Program Income (Estimate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>