force-app/main/default/objects/IndividualApplication/fields/gr_ProjectEndDate__c.field-meta.xml
<CustomField>
    <fullName>gr_ProjectEndDate__c</fullName>
    <inlineHelpText>Proposed Project End Date</inlineHelpText>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>