force-app/main/default/objects/IndividualApplication/fields/gr_ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>gr_ProjectStartDate__c</fullName>
    <inlineHelpText>Proposed Project Start Date</inlineHelpText>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>