force-app/main/default/objects/IndividualApplication/fields/gr_ProjectTitle__c.field-meta.xml
<CustomField>
    <fullName>gr_ProjectTitle__c</fullName>
    <description>Descriptive title of the applicant&apos;s project.</description>
    <inlineHelpText>Descriptive title of the applicant&apos;s project.</inlineHelpText>
    <label>Project Title</label>
    <type>TextArea</type>
</CustomField>