force-app/main/default/objects/IndividualApplication/fields/gr_RelatedApplication__c.field-meta.xml
<CustomField>
    <fullName>gr_RelatedApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For new applications, leave blank. For a continuation or revision to an existing award, enter the previously assigned federal award identifier number. If a changed/corrected application, enter the federal identifier in accordance with agency instructions.</inlineHelpText>
    <label>Related Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Individual Applications</relationshipLabel>
    <relationshipName>Related_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>