force-app/main/default/objects/IndividualApplication/fields/gr_RevisionType__c.field-meta.xml
<CustomField>
    <fullName>gr_RevisionType__c</fullName>
    <label>Revision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase Award</fullName>
            </value>
            <value>
                <fullName>Decrease Award</fullName>
            </value>
            <value>
                <fullName>Increase Duration</fullName>
            </value>
            <value>
                <fullName>Decrease Duration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Increase Award, Increase Duration</fullName>
            </value>
            <value>
                <fullName>Increase Award, Decrease Duration</fullName>
            </value>
            <value>
                <fullName>Decrease Award, Increase Duration</fullName>
            </value>
            <value>
                <fullName>Decrease Award, Decrease Duration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>