force-app/main/default/objects/IndividualApplication/fields/gr_SpecifyRevisionType__c.field-meta.xml
<CustomField>
    <fullName>gr_SpecifyRevisionType__c</fullName>
    <inlineHelpText>please specify a reason when Other is selected as the Revision Type.</inlineHelpText>
    <label>Specify Revision Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>