force-app/main/default/objects/IndividualApplication/fields/gr_StateApplicationID__c.field-meta.xml
<CustomField>
    <fullName>gr_StateApplicationID__c</fullName>
    <description>This date will be assigned by the state, if applicable</description>
    <label>State Application Identification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>