force-app/main/default/objects/IndividualApplication/fields/gr_StateFundingEstimated__c.field-meta.xml
<CustomField>
    <fullName>gr_StateFundingEstimated__c</fullName>
    <label>State Funding (Estimated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>