force-app/main/default/objects/IndividualApplication/fields/gr_StateReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>gr_StateReceivedDate__c</fullName>
    <description>This date will be assigned by the state, if applicable</description>
    <label>Date Received By State</label>
    <type>Date</type>
</CustomField>