force-app/main/default/objects/IndividualApplication/fields/gr_StateReviewDate__c.field-meta.xml
<CustomField>
    <fullName>gr_StateReviewDate__c</fullName>
    <inlineHelpText>The date this application was made available to the State under the Executive Order 12372 Process for Review</inlineHelpText>
    <label>State Review Date</label>
    <type>Date</type>
</CustomField>