force-app/main/default/objects/IndividualApplication/fields/gr_SubmissionType__c.field-meta.xml
<CustomField>
    <fullName>gr_SubmissionType__c</fullName>
    <description>A code denoting the type of grant application submitted, e.g., initial application for a Federal award, pre-application, or revised application for a Federal award.</description>
    <label>Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preapplication</fullName>
                <label>Pre-application</label>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Changed/Corrected Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>