force-app/main/default/objects/IndividualApplication/fields/gr_TotalFundingEstimate__c.field-meta.xml
<CustomField>
    <fullName>gr_TotalFundingEstimate__c</fullName>
    <description>sum the total estimated funding</description>
    <formula>gr_ApplicantFundingEstimate__c + gr_FederalFundingEstimated__c + gr_LocalFundingEstimate__c + gr_OtherFundingEstimate__c + gr_ProgramIncomeEstimate__c + gr_StateFundingEstimated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Funding (Estimate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>