force-app/main/default/objects/IndividualApplication/recordTypes/gr_Federal_Application.recordType-meta.xml
<RecordType>
    <fullName>gr_Federal_Application</fullName>
    <active>true</active>
    <description>Federal Award Application Package</description>
    <label>Federal Application</label>
</RecordType>